# totp

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: authenticator.rs  main.rs
src/authenticator/: google_authenticator.rs  mod.rs
src/cli/: args.rs  commands.rs
src/configuration/: configuration.rs
